--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,26 +1,41 @@
+header {
+  width: 100%;
+}
+
 header > nav {
   background-color: #ddd;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: center;
   padding: 0.3rem;
   gap: 12px;
 }
 
-header > nav > img {
+header > nav > a {
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
+header > nav > a > img {
+  transition: transform 1s;
   border-radius: 50%;
   width: 2.5rem;
 }
 
-header > nav > span {
+header > nav > a > img:hover {
+  transform: rotate(360deg);
+}
+
+header > nav > a > span {
   font-size: 0.9rem;
   animation-name: example;
   animation-duration: 4s;
 }
 
 /* css blinking text cursor */
-header > nav > span > .blinker {
+header > nav > a > span > .blinker {
   animation-name: blinker;
   animation-iteration-count: infinite;
   animation-timing-function: cubic-bezier(1, 0, 0, 1);
