--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,9 +1,16 @@
+main {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .login-form {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  height: 82vh;
 }
 
 .login-header {
