--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -39,7 +39,6 @@ header {
   transform-style: preserve-3d;
 }
 
-
 .face {
   width: 100%;
   height: 100%;
@@ -67,7 +66,7 @@ header {
 
 .back {
   background-image: url(../images/backjpg.jpg);
-  
+
   backface-visibility: hidden;
 }
 
@@ -75,6 +74,36 @@ header {
   transform: rotateY(180deg);
 }
 
-.disabled-card { 
+.disabled-card {
   filter: saturate(0);
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  background-color: hsla(27, 100%, 26%, 0.4);
+  backdrop-filter: blur(6px) saturate(120%) contrast(100%);
+  -webkit-backdrop-filter: blur(6px) saturate(120%) contrast(100%);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 40em;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #f4f3f1;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 50px;
 }
