--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -122,6 +122,10 @@ input[type="checkbox"] {
   transition: transform 0.2s linear;
 }
 
+input[type="checkbox"]:hover + .label {
+  cursor: pointer;
+}
+
 input[type="checkbox"]:checked + .label .ball {
   transform: translateX(24px);
 }
@@ -135,13 +139,16 @@ input[type="checkbox"]:checked + .label .ball {
 }
 
 .login-form {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
-  max-width: 25rem;
-  margin: 0 auto;
 }
 
 .login-header {
@@ -150,10 +157,17 @@ input[type="checkbox"]:checked + .label .ball {
   align-items: center;
   justify-content: center;
   margin-bottom: 50px;
+  width: 100%;
+}
+
+@media (max-width: 400px) {
+  .login-header h1{
+    font-size: 1.5em;
+  }
 }
 
 .login-header img {
-  border-radius: 50%;
+  width: 23%;
   width: 100px;
 }
 
